--- a/hdi_crm/views/crm_menu.xml
+++ b/hdi_crm/views/crm_menu.xml
@@ -16,7 +16,7 @@
     sequence="1"/>
   <menuitem
     id="menu_crm_opportunities"
-    name="Pipeline của tôi"
+    name="Quy trình của tôi"
     parent="crm_menu_sales"
     action="crm.action_your_pipeline"
     sequence="1"/>
@@ -66,7 +66,7 @@
     sequence="1"/>
   <menuitem
     id="crm_opportunity_report_menu"
-    name="Pipeline"
+    name="Quy trình"
     parent="crm_menu_report"
     action="crm.crm_opportunity_report_action"
     sequence="2"/>
@@ -145,7 +145,7 @@
     groups="crm.group_use_recurring_revenues"/>
   <menuitem
     id="menu_crm_config_lead"
-    name="Pipeline"
+    name="Giai đoạn"
     parent="crm_menu_config"
     sequence="15"
     groups="sales_team.group_sale_manager"/>
