--- a/hdi_product/views/product_category_views.xml
+++ b/hdi_product/views/product_category_views.xml
@@ -1,33 +1,37 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <record id="view_hdi_product_category_list" model="ir.ui.view">
-    <field name="name">hdi.product.category.list</field>
-    <field name="model">product.category</field>
-    <field name="arch" type="xml">
-      <list>
-        <field name="name"/>
-        <field name="parent_id"/>
-        <field name="hdi_description"/>
-      </list>
-    </field>
-  </record>
+    <record id="hdi_product_category_tree" model="ir.ui.view">
+        <field name="name">hdi.product.category.tree</field>
+        <field name="model">product.category</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="parent_id"/>
+                <field name="hdi_description"/>
+            </tree>
+        </field>
+    </record>
 
-  <record id="view_hdi_product_category_form" model="ir.ui.view">
-    <field name="name">hdi.product.category.form</field>
-    <field name="model">product.category</field>
-    <field name="arch" type="xml">
-      <form>
-        <sheet>
-          <group>
-            <field name="name"/>
-            <field name="parent_id"/>
-            <field name="hdi_description"/>
-          </group>
-          <group>
-            <field name="image_1920"/>
-          </group>
-        </sheet>
-      </form>
-    </field>
-  </record>
+    <record id="hdi_product_category_form" model="ir.ui.view">
+        <field name="name">hdi.product.category.form</field>
+        <field name="model">product.category</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="parent_id"/>
+                        <field name="hdi_description"/>
+                        <field name="hdi_image"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="hdi_product_category_action" model="ir.actions.act_window">
+        <field name="name">Danh mục sản phẩm</field>
+        <field name="res_model">product.category</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
 </odoo>
