--- a/hdi_product/views/product_views.xml
+++ b/hdi_product/views/product_views.xml
@@ -1,44 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <!-- Product tree view for HDI (simple list) -->
-  <record id="view_hdi_product_list" model="ir.ui.view">
-    <field name="name">hdi.product.template.list</field>
-    <field name="model">product.template</field>
-    <field name="arch" type="xml">
-      <list>
-        <field name="name"/>
-        <field name="categ_id"/>
-        <field name="uom_id"/>
-        <field name="list_price"/>
-        <field name="standard_price"/>
-        <field name="hdi_custom_code"/>
-        <field name="active"/>
-      </list>
-    </field>
-  </record>
+    <record id="hdi_product_template_form" model="ir.ui.view">
+        <field name="name">hdi.product.template.form</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
+        <field name="arch" type="xml">
 
-  <!-- Product form view — we keep the core product.template fields and add HDI fields -->
-  <record id="view_hdi_product_form" model="ir.ui.view">
-    <field name="name">hdi.product.template.form</field>
-    <field name="model">product.template</field>
-    <field name="inherit_id" ref="product.product_template_only_form_view"/>
-    <field name="arch" type="xml">
-      <xpath expr="//sheet/notebook/page[1]" position="inside">
-        <group string="HDI">
-          <field name="hdi_custom_code"/>
-          <field name="hdi_attributes"/>
-        </group>
-      </xpath>
-    </field>
-  </record>
+            <xpath expr="//sheet/notebook/page[@name='general_information']/group" position="after">
+                <group string="HDI Extra Info">
+                    <field name="hdi_brand"/>
+                    <field name="hdi_warranty_months"/>
+                    <field name="hdi_note"/>
+                </group>
+            </xpath>
 
-  <!-- Action and menu -->
-  <record id="action_hdi_product_template" model="ir.actions.act_window">
-    <field name="name">Sản phẩm (HDI)</field>
-    <field name="res_model">product.template</field>
-    <field name="view_mode">kanban,list,form</field>
-    <field name="help" type="html">
-      <p class="oe_view_nocontent_create">Tạo sản phẩm mới</p>
-    </field>
-  </record>
+        </field>
+    </record>
+
+    <record id="hdi_product_action" model="ir.actions.act_window">
+        <field name="name">Sản phẩm</field>
+        <field name="res_model">product.template</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
 </odoo>
