--- a/hdi_product/views/product_category_views.xml
+++ b/hdi_product/views/product_category_views.xml
@@ -1,13 +1,13 @@
 <odoo>
-    <record id="hdi_product_category_tree" model="ir.ui.view">
-        <field name="name">hdi.product.category.tree</field>
+    <record id="hdi_product_category_list" model="ir.ui.view">
+        <field name="name">hdi.product.category.list</field>
         <field name="model">product.category</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="parent_id"/>
                 <field name="hdi_description"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -31,7 +31,7 @@
     <record id="hdi_product_category_action" model="ir.actions.act_window">
         <field name="name">Danh mục sản phẩm</field>
         <field name="res_model">product.category</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
 </odoo>
