--- a/hdi_product/views/product_views.xml
+++ b/hdi_product/views/product_views.xml
@@ -19,7 +19,7 @@
     <record id="hdi_product_action" model="ir.actions.act_window">
         <field name="name">Sản phẩm</field>
         <field name="res_model">product.template</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
 </odoo>
