--- a/hdi_product/views/menu.xml
+++ b/hdi_product/views/menu.xml
@@ -19,7 +19,7 @@
               sequence="10"/>
     <menuitem id="hdi_product_types_menu"
               name="Loại sản phẩm"
-              parent="hdi_product_root"
+              parent="hdi_product_config_menu"
               action="action_hdi_product_type"
               sequence="3"/>
 </odoo>
