Update hdi_shipping to use list instead of tree views for Odoo 18 compatibility

--- a/hdi_shipping/views/shipping_order_views.xml
+++ b/hdi_shipping/views/shipping_order_views.xml
@@ -61,14 +61,14 @@
           </group>
 
           <!-- Shipment Items Table -->
-          <field name="shipment_item_ids" mode="tree">
-            <tree editable="bottom">
+          <field name="shipment_item_ids">
+            <list editable="bottom">
               <field name="name" required="1"/>
               <field name="category"/>
               <field name="quantity"/>
               <field name="weight" required="1"/>
               <field name="value"/>
-            </tree>
+            </list>
           </field>
 
           <!-- Shipping Service & Cost -->
