Add receiver address model and views; update shipping order to use receiver address

--- a/hdi_shipping_express/views/menu.xml
+++ b/hdi_shipping_express/views/menu.xml
@@ -24,4 +24,10 @@
             parent="hdi_shipping_config" 
             action="action_sender_address" 
             sequence="20"/>
+
+  <menuitem id="hdi_receiver_addresses" 
+            name="Địa chỉ nhận hàng" 
+            parent="hdi_shipping_config" 
+            action="action_receiver_address" 
+            sequence="30"/>
 </odoo>
