--- a/hdi_sale/views/sale_order_views.xml
+++ b/hdi_sale/views/sale_order_views.xml
@@ -1,47 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <!-- Sale Order Form View - Extended -->
-  <record id="view_hdi_sale_order_form" model="ir.ui.view">
-    <field name="name">sale.order.form.hdi</field>
+  <!-- Shipping Order Form View -->
+  <record id="view_shipping_order_form" model="ir.ui.view">
+    <field name="name">sale.order.shipping.form</field>
     <field name="model">sale.order</field>
-    <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
-      <xpath expr="//group[@name='sales_person']" position="after">
-        <group string="HDI - Thông tin bổ sung" name="hdi_info">
-          <field name="hdi_order_type"/>
-          <field name="hdi_priority"/>
-          <field name="hdi_sale_channel"/>
-        </group>
-      </xpath>
-      <xpath expr="//notebook" position="inside">
-        <page string="Ghi chú nội bộ" name="hdi_notes">
-          <field name="hdi_notes" nolabel="1"/>
-        </page>
-      </xpath>
+      <form>
+        <header>
+          <button name="action_submit_shipping" string="Gửi Hàng" type="object" class="oe_highlight" invisible="is_shipping_order"/>
+          <button name="action_cancel" string="Hủy" type="object" invisible="state not in ['draft', 'sent']"/>
+          <field name="state" widget="statusbar"/>
+        </header>
+        <sheet>
+          <div class="oe_title">
+            <h1>
+              <field name="name" readonly="1"/>
+            </h1>
+          </div>
+
+          <!-- 3.1 Thông tin người gửi -->
+          <group string="3.1 Thông tin người gửi" name="sender_group">
+            <field name="sender_address_id" widget="many2one" options="{'no_create': False}"/>
+            <field name="sender_name"/>
+            <field name="sender_phone"/>
+            <field name="sender_street"/>
+          </group>
+
+          <!-- 3.2 Thông tin người nhận -->
+          <group string="3.2 Thông tin người nhận" name="receiver_group">
+            <field name="receiver_address_id" widget="many2one" options="{'no_create': False}"/>
+            <field name="receiver_name"/>
+            <field name="receiver_phone"/>
+            <field name="receiver_street"/>
+            <field name="receiver_city"/>
+            <field name="receiver_state"/>
+            <field name="delivery_time_slot"/>
+          </group>
+
+          <!-- 3.3 Thông tin hàng hóa -->
+          <group string="3.3 Thông tin hàng hóa" name="goods_group">
+            <field name="goods_description"/>
+            <field name="reference_code" placeholder="Mã tham chiếu (có thể bỏ trống)"/>
+            <field name="goods_value"/>
+            <field name="allow_view_goods"/>
+          </group>
+
+          <!-- 3.4 Dịch vụ vận chuyển -->
+          <group string="3.4 Dịch vụ vận chuyển" name="service_group">
+            <field name="shipping_service_id" widget="many2one" options="{'no_create': True}"/>
+            <field name="base_shipping_cost" readonly="1"/>
+          </group>
+
+          <!-- 3.5 Thông tin cước phí -->
+          <group string="3.5 Thông tin cước phí" name="fee_group">
+            <field name="receiver_pay_fee"/>
+            <field name="cod_amount" invisible="not receiver_pay_fee"/>
+            <field name="pickup_at_office"/>
+            <field name="total_shipping_fee" readonly="1"/>
+            <field name="shipping_notes" nolabel="1" colspan="2" placeholder="Ghi chú đơn hàng"/>
+          </group>
+        </sheet>
+      </form>
     </field>
   </record>
 
-  <!-- Sale Order List View - Extended -->
-  <record id="view_hdi_sale_order_list" model="ir.ui.view">
-    <field name="name">sale.order.list.hdi</field>
-    <field name="model">sale.order</field>
-    <field name="inherit_id" ref="sale.view_order_tree"/>
-    <field name="arch" type="xml">
-      <xpath expr="//field[@name='partner_id']" position="after">
-        <field name="hdi_order_type"/>
-        <field name="hdi_priority"/>
-      </xpath>
-    </field>
-  </record>
-
-  <!-- Action: Create Sale Order -->
+  <!-- Action: Create Shipping Order -->
   <record id="action_hdi_sale_order" model="ir.actions.act_window">
-    <field name="name">Tạo đơn hàng</field>
+    <field name="name">Tạo phiếu gửi hàng</field>
     <field name="res_model">sale.order</field>
     <field name="view_mode">form,list</field>
-    <field name="context">{'default_hdi_order_type': 'standard'}</field>
+    <field name="view_id" ref="view_shipping_order_form"/>
+    <field name="context">{'default_is_shipping_order': True}</field>
     <field name="help" type="html">
-      <p class="oe_view_nocontent_create">Tạo đơn hàng bán hàng mới</p>
+      <p class="oe_view_nocontent_create">Tạo phiếu gửi hàng mới</p>
     </field>
   </record>
 </odoo>
